// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compose renders 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "compose-message.cancel",
        "title": "Cancel",
      },
    ]
  }
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "disabled": true,
        "style": "done",
        "testID": "compose-message.send",
        "title": "Send",
      },
      Object {
        "accessibilityLabel": "Edit attachments (0)",
        "action": [Function],
        "badge": false,
        "image": Object {
          "testUri": "../../../src/images/attachment-large.png",
        },
        "testID": "compose-message.attach",
      },
    ]
  }
  showDismissButton={false}
  title="New Message"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Sending..."
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingBottom": 16,
        }
      }
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
        testID="compose.course-select"
        underlayColor="#fff"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#7F91A7",
                  "fontSize": 16,
                  "lineHeight": 19,
                },
                undefined,
              ]
            }
          >
            Select a Course
          </Text>
          <DisclosureIndicator />
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          onChangeText={[Function]}
          placeholder="Subject"
          placeholderTextColor="#7F91A7"
          style={
            Array [
              Object {
                "fontSize": 16,
                "height": 54,
                "lineHeight": 19,
              },
              Object {
                "color": "#7F91A7",
                "fontSize": 16,
                "lineHeight": 19,
              },
              Object {
                "color": "#2D3B45",
              },
            ]
          }
          value={null}
        />
      </View>
      <RowWithSwitch
        border="bottom"
        identifier="compose-message.send-all-toggle"
        onValueChange={[Function]}
        title="Send individual message to each recipient"
        value={false}
      />
      <View
        style={
          Array [
            Object {
              "paddingBottom": 12.8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12.8,
            },
            Object {
              "borderBottomWidth": 0,
              "paddingBottom": 40,
              "paddingTop": 10,
            },
          ]
        }
      >
        <AutoGrowingTextInput
          defaultHeight={54}
          extraHeight={20}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          placeholder="Compose Message"
          placeholderTextColor="#7F91A7"
          style={
            Object {
              "fontSize": 16,
              "height": 54,
              "lineHeight": 19,
            }
          }
          testID="compose-message.body-text-input"
        />
      </View>
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`Compose renders after picking a course 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "compose-message.cancel",
        "title": "Cancel",
      },
    ]
  }
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "disabled": true,
        "style": "done",
        "testID": "compose-message.send",
        "title": "Send",
      },
      Object {
        "accessibilityLabel": "Edit attachments (0)",
        "action": [Function],
        "badge": false,
        "image": Object {
          "testUri": "../../../src/images/attachment-large.png",
        },
        "testID": "compose-message.attach",
      },
    ]
  }
  showDismissButton={false}
  title="New Message"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Sending..."
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingBottom": 16,
        }
      }
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
        testID="compose.course-select"
        underlayColor="#fff"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#7F91A7",
                  "fontSize": 16,
                  "lineHeight": 19,
                },
                undefined,
              ]
            }
          >
            Select a Course
          </Text>
          <DisclosureIndicator />
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          onChangeText={[Function]}
          placeholder="Subject"
          placeholderTextColor="#7F91A7"
          style={
            Array [
              Object {
                "fontSize": 16,
                "height": 54,
                "lineHeight": 19,
              },
              Object {
                "color": "#7F91A7",
                "fontSize": 16,
                "lineHeight": 19,
              },
              Object {
                "color": "#2D3B45",
              },
            ]
          }
          value={null}
        />
      </View>
      <RowWithSwitch
        border="bottom"
        identifier="compose-message.send-all-toggle"
        onValueChange={[Function]}
        title="Send individual message to each recipient"
        value={false}
      />
      <View
        style={
          Array [
            Object {
              "paddingBottom": 12.8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12.8,
            },
            Object {
              "borderBottomWidth": 0,
              "paddingBottom": 40,
              "paddingTop": 10,
            },
          ]
        }
      >
        <AutoGrowingTextInput
          defaultHeight={54}
          extraHeight={20}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          placeholder="Compose Message"
          placeholderTextColor="#7F91A7"
          style={
            Object {
              "fontSize": 16,
              "height": 54,
              "lineHeight": 19,
            }
          }
          testID="compose-message.body-text-input"
        />
      </View>
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`Compose renders reply 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "compose-message.cancel",
        "title": "Cancel",
      },
    ]
  }
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "disabled": true,
        "style": "done",
        "testID": "compose-message.send",
        "title": "Send",
      },
      Object {
        "accessibilityLabel": "Edit attachments (0)",
        "action": [Function],
        "badge": false,
        "image": Object {
          "testUri": "../../../src/images/attachment-large.png",
        },
        "testID": "compose-message.attach",
      },
    ]
  }
  showDismissButton={false}
  title="New Message"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Sending..."
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingBottom": 16,
        }
      }
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
        testID="compose.course-select"
        underlayColor="#fff"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#7F91A7",
                  "fontSize": 16,
                  "lineHeight": 19,
                },
                Object {
                  "color": "#2D3B45",
                },
              ]
            }
          >
            Course 1
          </Text>
        </View>
      </TouchableHighlight>
      <View
        style={
          Array [
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "paddingHorizontal": 16,
            },
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 54,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "height": 54,
              "justifyContent": "center",
              "padding": 6,
              "paddingLeft": 0,
            }
          }
          testID="compose.recipients-placeholder"
        >
          <Text
            style={
              Object {
                "color": "#7F91A7",
                "fontSize": 16,
                "lineHeight": 19,
              }
            }
          >
            To
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "flexWrap": "wrap",
              "paddingVertical": 8,
            }
          }
        />
        <TouchableOpacity
          accessibilityLabel="Add recipient"
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          onPress={[Function]}
          style={
            Object {
              "height": 54,
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/Add.png",
              }
            }
            style={
              Object {
                "tintColor": "#368BD8",
              }
            }
          />
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={false}
          onChangeText={[Function]}
          placeholder="Subject"
          placeholderTextColor="#7F91A7"
          style={
            Array [
              Object {
                "fontSize": 16,
                "height": 54,
                "lineHeight": 19,
              },
              Object {
                "color": "#7F91A7",
                "fontSize": 16,
                "lineHeight": 19,
              },
              Object {
                "color": "#2D3B45",
              },
            ]
          }
          value="(no subject)"
        />
      </View>
      <RowWithSwitch
        border="bottom"
        identifier="compose-message.send-all-toggle"
        onValueChange={[Function]}
        title="Send individual message to each recipient"
        value={false}
      />
      <View
        style={
          Array [
            Object {
              "paddingBottom": 12.8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12.8,
            },
            Object {
              "borderBottomWidth": 0,
              "paddingBottom": 40,
              "paddingTop": 10,
            },
          ]
        }
      >
        <AutoGrowingTextInput
          defaultHeight={54}
          extraHeight={20}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          placeholder="Compose Message"
          placeholderTextColor="#7F91A7"
          style={
            Object {
              "fontSize": 16,
              "height": 54,
              "lineHeight": 19,
            }
          }
          testID="compose-message.body-text-input"
        />
      </View>
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`Compose renders with passed in recipients 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "compose-message.cancel",
        "title": "Cancel",
      },
    ]
  }
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "disabled": true,
        "style": "done",
        "testID": "compose-message.send",
        "title": "Send",
      },
      Object {
        "accessibilityLabel": "Edit attachments (0)",
        "action": [Function],
        "badge": false,
        "image": Object {
          "testUri": "../../../src/images/attachment-large.png",
        },
        "testID": "compose-message.attach",
      },
    ]
  }
  showDismissButton={false}
  title="New Message"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Sending..."
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingBottom": 16,
        }
      }
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
        testID="compose.course-select"
        underlayColor="#fff"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#7F91A7",
                  "fontSize": 16,
                  "lineHeight": 19,
                },
                undefined,
              ]
            }
          >
            Select a Course
          </Text>
          <DisclosureIndicator />
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          editable={true}
          onChangeText={[Function]}
          placeholder="Subject"
          placeholderTextColor="#7F91A7"
          style={
            Array [
              Object {
                "fontSize": 16,
                "height": 54,
                "lineHeight": 19,
              },
              Object {
                "color": "#7F91A7",
                "fontSize": 16,
                "lineHeight": 19,
              },
              Object {
                "color": "#2D3B45",
              },
            ]
          }
          value={null}
        />
      </View>
      <RowWithSwitch
        border="bottom"
        identifier="compose-message.send-all-toggle"
        onValueChange={[Function]}
        title="Send individual message to each recipient"
        value={false}
      />
      <View
        style={
          Array [
            Object {
              "paddingBottom": 12.8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12.8,
            },
            Object {
              "borderBottomWidth": 0,
              "paddingBottom": 40,
              "paddingTop": 10,
            },
          ]
        }
      >
        <AutoGrowingTextInput
          defaultHeight={54}
          extraHeight={20}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          placeholder="Compose Message"
          placeholderTextColor="#7F91A7"
          style={
            Object {
              "fontSize": 16,
              "height": 54,
              "lineHeight": 19,
            }
          }
          testID="compose-message.body-text-input"
        />
      </View>
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;
